[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-xthings-cloud"
version = "1.0.4"
description = "Async Python client for Xthings Cloud API"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Xthings", email = "dev@xthings.com"},
]
keywords = ["xthings", "iot", "smart-home", "home-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Home Automation",
]
dependencies = [
    "aiohttp>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/XthingsJacobs/ha-xthings-cloud"
Repository = "https://github.com/XthingsJacobs/ha-xthings-cloud"
Issues = "https://github.com/XthingsJacobs/ha-xthings-cloud/issues"

[tool.setuptools.packages.find]
include = ["ha_xthings_cloud*"]
